syntax = "proto3";
import "google/protobuf/any.proto";
import "technical.proto";

option java_package = "com.example.any";
option java_multiple_files = true;

/**
 * We want to send two different message types: an AccountTypeEvent, and a Marker event. This schema defines these
 * different messages in an Any that can implicitly contain both message types
 */
message TopicEnvelopeUsingAny {
    Header header = 1;
    google.protobuf.Any event = 2;
}
